# purposepilot

./: .gitignore  README.md  build.py  purposepilot.code-workspace  run.bat
backend/: .pylintrc  PPP.db  db.ipynb  main.py  purpose_pilot.db-journal  pyproject.toml  requestments-dev.txt
backend/auth/: account_manager.py  account_repository.py  login_user_model.py  manager.py  model.py  register_user_model.py  repositoy.py  session.py  session_store.py  user_model.py  utils.py
backend/models/: user.py
backend/purpose/: model.py
backend/purpose_pilot/: main.py
backend/purpose_pilot/action/: action_manager.py  action_repository.py  model.py
backend/purpose_pilot/auth/: register_user_model.py  session_model.py  session_repository.py  user_model.py
backend/purpose_pilot/purpose/: model.py  purpose_repository.py
backend/purpose_pilot/review/: __init__.py  model.py  review_manager.py  review_repository.py
backend/purpose_pilot/user/: model.py  user_manager.py
backend/scripts/: create_db.py  db.ipynb  init_test_db.py  insert_test_db.py
backend/session/: __init__.py  session_manager.py  session_model.py  session_repository.py
backend/src/: main.py
backend/src/action/: __init__.py  action_manager.py  action_repository.py  model.py
backend/src/auth/: __init__.py  auth_manager.py  auth_repository.py  login_user_model.py  utils.py
backend/src/purpose/: __init__.py  model.py  purpose_manager.py  purpose_repository.py
backend/src/review/: model.py  review_manager.py  review_repository.py
backend/tests/: test_api.py
backend/user/: model.py
(+54 files in other folders)
