[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "purpose_pilot"
version = "0.0.1"
description = "purpose pilot web api server"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
]

[project.optional-dependencies]
gui