[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purpose_pilot"
version = "0.0.1"
description = "purpose pilot web api server"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "httpx"
]

[project.scripts]
server = "purpose_pilot:main"

[tool.hatch.build.targets.wheel]
packages = ["purpose_pilot"]